Bug 534325: Apply SMIL restart semantics at interval start times rather than end times, and allow duration to determine interval-ending when there's no end attribute. r=dholbert sr=roc